--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Hello, {{ user.nickname }}!</h1>
+<h1>Bubble cloud</h1>
 
 <form method="post" action="{{ url_for('lemmatize_form') }}">
     <div class="form-group">
