--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -1,28 +1,33 @@
 
-.lemmatized-text {
-	font-family: 'Raleway',sans-serif; 
-	font-size: 18px; 
-	font-weight: 500; 
-	line-height: 32px; 
-	margin: 0 0 24px;
+body {
 }
-
-
-/*Bubble code*/
-
-#controls {
-	margin-bottom: 50px;
-}
-
-#vis {
-	height: 520px;
-}
-
 
 a, a:visited {
   color:#333;
 }
 
+#container {
+  padding-top:20px;
+  width: 980px;
+  border-left: 2px #ddd solid;
+  border-right: 2px #ddd solid;
+}
+
+header {
+  padding: 10px;
+}
+
+#book-title {
+  font-family: georgia, "times new roman", times, serif;
+  color: #555;
+  font-size: 2.3em;
+  text-align: center;
+}
+
+#text-select {
+  float:right;
+  margin-right: 10px;
+}
 
 #vis {
   overflow: hidden;
@@ -33,6 +38,12 @@ a, a:visited {
   padding:0 0 20px 20px;
 }
 
+#controls {
+  padding: 20px;
+  background-color: #eee;
+  margin: 10px;
+  width: 350px;
+}
 
 #bubble-background {
   fill: none;
@@ -79,6 +90,9 @@ a.bubble-label {
 }
 
 footer p {
+  text-align: center;
+  padding-top:20px;
+  padding-bottom:20px;
   font: 13px sans-serif;
 }
 
