--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,41 @@
 {% block content %}
 <h1>Bubble cloud</h1>
 
-<form method="post" action="{{ url_for('lemmatize_form') }}">
-    <div class="form-group">
-        <label for="textInput">Teksti lemmatiseerimiseks</label>
-        <textarea class="form-control" id="textInput" rows="3" name="text"></textarea>
-    </div>
-    <button type="submit" class="btn btn-default">Submit</button>
-</form>
+	<form method="post" action="{{ url_for('create_bubbles') }}"  id="lem-submit">
+		<div class="row">
+		    <div class="form-group col-xs-12 col-lg-6">
+		        <label for="text-input">Teksti lemmatiseerimiseks</label>
+		        <textarea class="form-control" id="text-input" rows="3" name="text"></textarea>
+		    </div>
+		</div>
+
+		<div class="row">
+		    <div class="form-group col-xs-12 col-lg-4">
+		        <label for="text-input">Number of words</label>
+	    	    <input id="limit_input" type="range" min="0" max="100" value="40" step="1" style="width:240px;">
+	    	    <output name="output" for="input" id="limit_output">40</output>
+		    </div>
+	    </div>
+
+	    <div class="row">
+		    <div class="col-xs-12">
+		    	<button type="submit" class="btn btn-default">Submit</button>
+		    </div>
+		</div>
+	</form>
+
+<div id="main" role="main">
+  <div id="vis"></div>
+  <div id="status"></div>
+  <div id="controls" class="row">
+    <div class="col-xs-12 col-md-6 col-lg 3">
+	    <h3>Jitter</h3>
+	    <form id="jitter" oninput="output.value = (jitter_input.value / 200).toFixed(3)" >
+	      <input id="jitter_input" type="range" min="0" max="400" value="100" style="width:240px;">
+	      <output name="output" for="input">0.5</output>
+	    </form>
+	</div>
+  </div>
+</div>
+
 {% endblock %}
