--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,43 +1,107 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<html>
 
-{% block content %}
-<h1>Bubble cloud</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="description" content="">
 
-	<form method="post" action="{{ url_for('create_bubbles') }}"  id="lem-submit">
-		<div class="row">
-		    <div class="form-group col-xs-12 col-lg-6">
-		        <label for="text-input">Teksti lemmatiseerimiseks</label>
-		        <textarea class="form-control" id="text-input" rows="3" name="text"></textarea>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
+
+        <!-- css -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/main.css') }}">
+
+        <title>{{ title }}</title>
+    </head>
+
+
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <div class="container">
+
+ 
+	<h1>Bubble cloud</h1>
+
+		<form method="post" action="http://rurake.keeleressursid.ee:5000/create_bubbles"  id="lem-submit">
+			<div class="row">
+			    <div class="form-group col-xs-12 col-lg-6">
+				<label for="text-input">Teksti lemmatiseerimiseks</label>
+				<textarea class="form-control" id="text-input" rows="3" name="text"></textarea>
+			    </div>
+			</div>
+
+			<div class="row">
+			    <div class="form-group col-xs-12 col-lg-4">
+				<label for="text-input">Number of words</label>
+			    <input id="limit_input" type="range" min="0" max="100" value="40" step="1" style="width:240px;">
+			    <output name="output" for="input" id="limit_output">40</output>
+			    </div>
 		    </div>
+
+		    <div class="row">
+			    <div class="col-xs-12">
+				<button type="submit" class="btn btn-default">Submit</button>
+			    </div>
+			</div>
+		</form>
+
+	<div id="main" role="main">
+	  <div id="vis"></div>
+	  <div id="status"></div>
+	  <div id="controls" class="row">
+	    <div class="col-xs-12 col-md-6 col-lg 3">
+		    <h3>Jitter</h3>
+		    <form id="jitter" oninput="output.value = (jitter_input.value / 200).toFixed(3)" >
+		      <input id="jitter_input" type="range" min="0" max="400" value="100" style="width:240px;">
+		      <output name="output" for="input">0.5</output>
+		    </form>
 		</div>
-
-		<div class="row">
-		    <div class="form-group col-xs-12 col-lg-4">
-		        <label for="text-input">Number of words</label>
-	    	    <input id="limit_input" type="range" min="0" max="100" value="40" step="1" style="width:240px;">
-	    	    <output name="output" for="input" id="limit_output">40</output>
-		    </div>
-	    </div>
-
-	    <div class="row">
-		    <div class="col-xs-12">
-		    	<button type="submit" class="btn btn-default">Submit</button>
-		    </div>
-		</div>
-	</form>
-
-<div id="main" role="main">
-  <div id="vis"></div>
-  <div id="status"></div>
-  <div id="controls" class="row">
-    <div class="col-xs-12 col-md-6 col-lg 3">
-	    <h3>Jitter</h3>
-	    <form id="jitter" oninput="output.value = (jitter_input.value / 200).toFixed(3)" >
-	      <input id="jitter_input" type="range" min="0" max="400" value="100" style="width:240px;">
-	      <output name="output" for="input">0.5</output>
-	    </form>
+	  </div>
 	</div>
-  </div>
-</div>
 
-{% endblock %}
+
+            <hr/>
+            <footer>
+                <p>University of Tartu Library 2017 | 
+                    Bubble code by <a href="http://vallandingham.me/building_a_bubble_cloud.html">Jim Vallandingham</a>
+                </p>
+            </footer>
+
+        </div>
+
+
+        <!-- libs -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+
+        <script src="{{ url_for('static',filename='js/vis.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/main.js') }}"></script>
+
+        <!-- Google Analytics-->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-72484971-3', 'auto');
+          ga('send', 'pageview');
+
+        </script>
+
+    </body>
+</html>
+
